--- a/.github/workflows/docker-build-tag.yml
+++ b/.github/workflows/docker-build-tag.yml
@@ -3,6 +3,8 @@ name: Build and push nearspark docker images
 on:
   push:
     branches: [ develop ]
+    paths: - '**Dockerfile'
+           - 'src/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
